@@ -48,7 +48,7 @@ static_dir          = static    ; default
 [JSAN::NPM]
 main = lib/Task/JooseX/CPS/All
 
-dependency            = joose                       >= 3.16.0
+dependency            = joose                       >= 3.18.0
 dependency            = joosex-namespace-depended   >= 0.14.0
 
 
