@@ -166,18 +166,26 @@ Class('JooseX.CPS.Continuation', {
 
             glob.__GLOBAL_CNT__ = scope.CONT = statement
             
-            try {
-                if (func.apply(scope, args) !== undefined) throw new Error("ERROR: Value returned from continued function (use `CONTINUE(value)` instead)") 
-            } catch (e) {
+            if (Joose.C.debug) {
                 
-                // if statement is already leaved, then we are just propagating the exception from the further statements
-                if (statement.leaved) throw e
+                if (func.apply(scope, args) !== undefined) throw new Error("ERROR: Value returned from continued function (use `CONTINUE(value)` instead)")
                 
-                statement.THROW(e)
-            } finally {
                 scope.CONT              = prevScopeStatement
                 glob.__GLOBAL_CNT__     = prevGlobStatement
-            }
+                
+            } else 
+                try {
+                    if (func.apply(scope, args) !== undefined) throw new Error("ERROR: Value returned from continued function (use `CONTINUE(value)` instead)") 
+                } catch (e) {
+                    
+                    // if statement is already leaved, then we are just propagating the exception from the further statements
+                    if (statement.leaved) throw e
+                    
+                    statement.THROW(e)
+                } finally {
+                    scope.CONT              = prevScopeStatement
+                    glob.__GLOBAL_CNT__     = prevGlobStatement
+                }
         },
         
 
