@@ -2,11 +2,6 @@ Role('JooseX.CPS.ControlFlow', {
     
     use : [ 'JooseX.CPS.Continuation' ],
     
-    has : {
-        CONT            : null
-    },
-    
-    
     methods : {
         
         __getCONT__ : function () {
